# iolo

./: .gitignore  Cargo.toml  DFINITY_DEV_GRANT.md  LICENSE.md  MAINNET.md  README.md  canister_ids.json  cleanup.sh  deploy.sh  dfx.json  did.sh  grep  install_tools.sh  out  package-lock.json  package.json  test.sh  tsconfig.json  update.sh  upgrade.sh  upgrade_backend.sh  vite.config.ts  webpack.config.js
src/iccrypt_tkd/: Cargo.toml  KeyPairs  iccrypt_tkd.did
src/iccrypt_tkd/src/: lib.rs
src/iccrypt_tkd/src/cryptography/: mod.rs
src/iccrypt_tkd/src/helper/: DerivationIdMapper.rs  KeyReader.rs  derivation_id_mapper.rs  mod.rs
src/iccrypt_tkd/src/utils/: KeyPairs.rs  key_pairs.rs  mod.rs  time.rs
src/iolo_backend/: Cargo.toml  iolo_backend.did
src/iolo_backend/.cargo/: config
src/iolo_backend/src/: lib.rs
src/iolo_backend/src/common/: error.rs  memory.rs  messages.rs  mod.rs  principal_id.rs  principal_storable.rs  user.rs  uuid.rs
src/iolo_backend/src/policies/: conditions.rs  conditions_manager.rs  mod.rs  policies_interface_impl.rs  policies_interface_impl_utests.rs  policy.rs  policy_registries.rs  policy_registry.rs  policy_store.rs
src/iolo_backend/src/secrets/: ii_secrets.rs  mod.rs  secret.rs  secret_store.rs  secrets_interface_impl.rs
src/iolo_backend/src/smart_vaults/: conditions.rs  key_manager.rs  master_vault.rs  mod.rs  secret.rs  secret_store.rs  smart_vault.rs  testament.rs  testament_registry.rs  user_registry.rs  user_registry_storable.rs  user_store.rs  user_vault.rs  user_vault_store.rs  vetkd_types.rs
src/iolo_backend/src/user_vaults/: mod.rs  user_vault.rs  user_vault_store.rs  user_vault_store_DO_NOT_USE_ANYMORE.rs
src/iolo_backend/src/users/: contact.rs  ii_users.rs  mod.rs  user.rs  user_store.rs  users_interface_impl.rs
src/iolo_backend/src/utils/: caller.rs  dumper.rs  login_date_condition.rs  mod.rs  random.rs  time.rs
src/iolo_backend/tests/: README_TESTS_HAVE_MOVED.md
tests/iccrypt-tests/: Cargo.toml
tests/iccrypt-tests-rust/: Cargo.toml
tests/iccrypt-tests-rust/src/: key_derivation.rs  main.rs
tests/iccrypt-tests-rust/src/common/: mod.rs
tests/iccrypt-tests-rust/src/tests/: encryption.rs  mod.rs  smart_vaults.rs  smart_vaults_secrets.rs  (+1 more)
tests/iccrypt-tests/src/: args.rs  key_derivation.rs  main.rs  smart_vaults.rs  utils.rs
(+304 files in other folders)
