[package]
name = "iccrypt_tkd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.68"
candid = "0.8.2"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
cfg-if = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
# openssl = "0.10.45"

[dev-dependencies]
ic-types = "0.7.0"
# tokio = { version = "1.23.0", features = ["full"] }
