[package]
name = "iolo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# crate-type = ["lib"]
crate-type = ["cdylib", "lib"]

[dependencies]
candid = "0.10.0"
ic-cdk = { version = "0.12.0"}
ic-cdk-macros = "0.8.2"
ic-stable-structures = "0.6.0"
serde = "1.0.150"
anyhow = "1.0.68"
cfg-if = "1.0.0"
hex = "0.4.3"
ic-cdk-timers = "0.6.0"


[dev-dependencies]
ic-agent = "0.31.0"
ic-types = "0.7.0"
tokio = { version = "1.23.0", features = ["full"] }
xshell = "0.2.3"
rand = "0.8.5"
