[package]
name = "iccrypt-tests-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
xshell = "0.2.3"
ic-agent = "0.26.1"
ic-types = "0.7.0"
candid = "0.9.3"
ic-cdk = { version = "0.10.0", features = [] }
ic-cdk-macros = "0.7.1"
serde = "1.0.150"
anyhow = "1.0.68"
pretty_assertions = "1.3.0"
iccrypt_backend = { path = "../../src/iccrypt_backend" }
ring = "0.16.20"
ic-vetkd-utils = { git = "https://github.com/dfinity/ic.git" }
colored = "2.0.4"
hex = "0.4.3"
aes-gcm = "0.10.2"
