[package]
name = "iccrypt-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
xshell = "0.2.3"
ic-agent = "0.23.0"
ic-types = "0.7.0"
candid = "0.8.2"
ic-cdk = { version = "0.6.10", features = [] }
ic-cdk-macros = "0.6.8"
serde = "1.0.150"
anyhow = "1.0.68"
pretty_assertions = "1.3.0"
iccrypt_backend = { path = "../../src/iccrypt_backend" }
